8240197: Cannot start JVM when $JAVA_HOME includes CJK characters

Reviewed-by: iklam, stuefe, rschmelter